<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/logoLayout"
                android:layout_margin="36dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_pill_white_48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="36sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/registerCv"
                app:cardCornerRadius="6dp"
                android:layout_marginRight="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginBottom="30dp"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:gravity="center"
                        android:text="Register"
                        android:layout_margin="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <RelativeLayout
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_centerVertical="true"
                            android:id="@+id/nameIv"
                            android:layout_margin="16dp"
                            android:src="@drawable/ic_account_circle_white_24dp"
                            android:tint="@color/colorPrimary"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />
                        <EditText
                            android:background="@null"
                            android:layout_centerVertical="true"
                            android:hint="@string/enter_name"
                            android:layout_toRightOf="@id/nameIv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_centerVertical="true"
                            android:id="@+id/emailIv"
                            android:layout_margin="16dp"
                            android:src="@drawable/ic_email_white_24dp"
                            android:tint="@color/colorPrimary"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />
                        <EditText
                            android:background="@null"
                            android:layout_centerVertical="true"
                            android:hint="@string/enter_email"
                            android:layout_toRightOf="@id/emailIv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_centerVertical="true"
                            android:id="@+id/contactIv"
                            android:layout_margin="16dp"
                            android:src="@drawable/ic_phone_white_24dp"
                            android:tint="@color/colorPrimary"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />
                        <EditText
                            android:background="@null"
                            android:layout_centerVertical="true"
                            android:hint="@string/enter_contact"
                            android:layout_toRightOf="@id/contactIv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_centerVertical="true"
                            android:id="@+id/passwordIv"
                            android:layout_margin="16dp"
                            android:src="@drawable/ic_lock_white_24dp"
                            android:tint="@color/colorPrimary"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />
                        <EditText
                            android:background="@null"
                            android:layout_centerVertical="true"
                            android:hint="@string/enter_password"
                            android:layout_toRightOf="@id/passwordIv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_centerVertical="true"
                            android:id="@+id/confirmPassIv"
                            android:layout_margin="16dp"
                            android:src="@drawable/ic_lock_check_white_24dp"
                            android:tint="@color/colorPrimary"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />
                        <EditText
                            android:background="@null"
                            android:layout_centerVertical="true"
                            android:hint="@string/enter_confirm"
                            android:layout_toRightOf="@id/confirmPassIv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/registerBtn"
                android:text="Register"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_below="@id/registerCv"
                android:layout_marginLeft="72dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="16dp"
                android:padding="18dp"
                android:background="@drawable/circular_border_indigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="16dp"
                android:layout_below="@id/registerBtn"
                android:onClick="goToLogIn"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/account_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>